# baobab-mtg-catalog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 001_specifications.md  dev_diary.md  v1.0.0_release_readiness_checklist.md
docs/features/: 00_common_transverse_rules.md  01_project_bootstrap.md  02_shared_domain_value_objects.md  03_set_domain_model.md  04_card_definition_domain_model.md  05_card_printing_domain_model.md  06_scryfall_normalization_adapters.md  07_in_memory_reference_repositories.md  08_catalog_import_idempotency.md  09_catalog_query_filters.md  10_query_services_and_facade.md  11_documentation_examples_and_release_readiness.md
src/baobab_mtg_catalog/: __init__.py
src/baobab_mtg_catalog/adapters/: __init__.py
src/baobab_mtg_catalog/builders/: __init__.py
src/baobab_mtg_catalog/domain/: __init__.py
src/baobab_mtg_catalog/exceptions/: __init__.py  baobab_mtg_catalog_exception.py  card_definition_not_found_error.py  card_printing_not_found_error.py  catalog_import_batch_set_mismatch_error.py  catalog_import_inconsistency_error.py  catalog_import_printing_definition_mismatch_error.py  catalog_import_set_scryfall_mismatch_error.py  invalid_card_definition_error.py  invalid_card_definition_identifier_error.py  invalid_card_face_error.py  invalid_card_printing_error.py  invalid_card_printing_identifier_error.py  invalid_card_type_line_error.py  invalid_collector_number_error.py  invalid_color_error.py  invalid_color_identity_error.py  invalid_domain_value_error.py  invalid_finish_error.py  invalid_game_format_error.py  invalid_language_error.py  invalid_legality_status_error.py  invalid_mana_cost_error.py  invalid_multiverse_id_error.py  invalid_oracle_id_error.py  invalid_payload_error.py  invalid_rarity_error.py  invalid_scryfall_id_error.py  invalid_set_code_error.py  invalid_set_error.py  invalid_set_id_error.py  invalid_set_type_error.py  mapping_error.py  normalization_error.py  repository_entity_conflict_error.py  set_not_found_error.py
src/baobab_mtg_catalog/facades/: __init__.py  mtg_catalog_facade.py
src/baobab_mtg_catalog/repositories/: __init__.py  card_definition_repository.py  card_printing_repository.py  set_repository.py
src/baobab_mtg_catalog/services/: __init__.py  card_definition_query_service.py  card_printing_query_service.py  catalog_definition_filter.py  catalog_import_batch_result.py  catalog_import_service.py  catalog_printing_filter.py  catalog_query_service.py  catalog_set_filter.py  set_query_service.py
tests/: __init__.py
tests/baobab_mtg_catalog/: __init__.py  conftest.py  test_package_init.py  test_readme_documentation_examples.py
tests/baobab_mtg_catalog/adapters/: __init__.py
tests/baobab_mtg_catalog/domain/: __init__.py
tests/baobab_mtg_catalog/exceptions/: __init__.py  test_baobab_mtg_catalog_exception.py  test_domain_validation_errors.py
tests/baobab_mtg_catalog/facades/: test_mtg_catalog_facade.py
tests/baobab_mtg_catalog/repositories/: __init__.py
tests/baobab_mtg_catalog/services/: __init__.py  scryfall_json_fixtures.py  test_card_definition_query_service.py  test_card_printing_query_service.py  test_catalog_import_service.py  (+2 more)
(+80 files in other folders)
