[build-system]
requires = ["setuptools>=69.0.0,<76.0.0", "wheel>=0.43.0,<1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baobab-mtg-catalog"
version = "0.3.0"
description = "Référentiel catalogue Magic: The Gathering — modèle métier local, normalisé et consultable (cartes, printings, sets, métadonnées)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Baobab" }]
keywords = ["mtg", "magic-the-gathering", "catalog", "scryfall", "baobab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "baobab-scryfall-api-caller>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7.0,<2.0.0",
    "black>=24.0.0,<25.0.0",
    "Flake8-pyproject>=1.2.0,<2.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pylint>=3.0.0,<4.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[project.urls]
Homepage = "https://github.com/baobabgit/baobab-mtg-catalog"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
baobab_mtg_catalog = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = "\\.pyi?$"
extend-exclude = "/(\\.venv|venv|build|dist)/"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=baobab_mtg_catalog",
    "--cov-report=term-missing",
    "--cov-report=html:docs/tests/coverage/html",
    "--cov-report=xml:docs/tests/coverage/coverage.xml",
    "--cov-config=pyproject.toml",
]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["baobab_mtg_catalog"]
data_file = "docs/tests/coverage/.coverage"
omit = []

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "docs/tests/coverage/html"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.main]
jobs = 0
py-version = "3.11"
source-roots = ["src"]
ignore-paths = ["^docs/tests/coverage/"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
]

[tool.pylint.DESIGN]
max-args = 8
max-attributes = 12

[tool.pylint.SIMILARITIES]
min-similarity-lines = 14

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "src/baobab_mtg_catalog/domain/__init__.py:F401,F403",
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "docs/tests/coverage",
]

[tool.bandit]
exclude_dirs = ["tests", "docs/tests/coverage"]
